# Vane

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  go.mod  install.sh  main.go
.github/workflows/: 1234.yml  build.yml  del.yml  test.yml
api/: handler.go  imports.go  restart_unix.go  restart_windows.go  sysinfo_unix.go  sysinfo_windows.go
config/: config.go  ipfilter.go
module/ddns/: ddns.go
module/portforward/: portforward.go
module/tls/: tls.go
module/webservice/: webservice.go
src/: acme.rs  assets.rs  auth.rs  db.rs  engines.rs  handlers.rs  main.rs  models.rs  state.rs
src/api/: auth.rs  dashboard.rs  ddns.rs  ipfilter.rs  mod.rs  portforward.rs  settings.rs  tls.rs  webservice.rs
src/config/: crypto.rs  db.rs  ipfilter.rs  mod.rs  types.rs
src/module/: ddns.rs  mod.rs  portforward.rs  tls.rs  webservice.rs
store/: store.go
web/: index.html  package.json  tailwind.config.js  vite.config.js
web/public/: manifest.json
web/src/: App.vue  main.js  style.css
web/src/components/: ConfirmModal.vue  ProviderBadge.vue  QuickStatusCard.vue  StatCard.vue  StatusBadge.vue
web/src/router/: index.js
web/src/stores/: auth.js  i18n.js  ui.js
web/src/views/: DDNS.vue  Dashboard.vue  IPFilter.vue  Layout.vue  Login.vue  PortForward.vue  Settings.vue  TLS.vue  WebService.vue
