[package]
name = "vane"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "net", "io-util", "time"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
password-hash = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
futures-util = "0.3"
url = "2"
ipnet = "2"
instant-acme = "0.7"
rcgen = "0.13"
base64 = "0.22"
x509-parser = "0.16"
zip = "0.6"
bcrypt = "0.15"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
urlencoding = "2"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
# Hyper for proper HTTP/1.1 + HTTP/2 reverse proxy
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
tower = { version = "0.4", features = ["util"] }
