[package]
name = "vane"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "vane"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "client", "client-legacy", "http1"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["sha2"] }
sha2 = "0.10"
hmac = "0.12"
bcrypt = "0.15"
rand = "0.8"
hex = "0.4"
instant-acme = "0.6"
rcgen = { version = "0.13", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
regex = "1"
once_cell = "1"
ipnetwork = "0.20"
scopeguard = "1"
url = "2"
pnet_datalink = "0.35"
rust-embed = { version = "8", features = ["include-exclude"] }
ignore = "=0.4.22"
mime_guess = "2"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
x509-parser = "0.16"

# Force older versions to avoid edition2024 / MSRV issues with cargo 1.80
globset = "=0.4.14"
indexmap = "=2.6.0"
time = "=0.3.36"
hyper-rustls = "=0.27.3"

base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
